@@ -94,6 +94,7 @@ namespace lsp
         {
             nBMask          = 0;
             nXFlags         = 0;
+            nPendingIndex   = -1;
             nCurrIndex      = -1;
             nLastIndex      = -1;
             nKeyScroll      = SCR_NONE;
@@ -465,28 +466,48 @@ namespace lsp
             // Realize children
             realize_children();
 
-            // Update scrolling
-//            item_t *curr    = find_by_index(nCurrIndex);
-//            ssize_t start   = vVisible.index_of(curr);
-//            if (start >= 0)
-//            {
-//                if (scroll_to_item(start))
-//                    realize_children();
-//            }
+            // Check if there is pending scroll_to_item
+            if (nPendingIndex >= 0)
+            {
+                item_t *curr    = find_by_index(nPendingIndex);
+                ssize_t start   = (curr != NULL) ? vVisible.index_of(curr) : -1;
+                if ((start >= 0) && (scroll_to_item(start)))
+                {
+                    realize_children();
+                    nCurrIndex          = nPendingIndex;
+                }
+
+                // Commit new index
+                nPendingIndex       = -1;
+            }
 
             // Call parent for realize
             WidgetContainer::realize(r);
         }
 
-        void ListBox::scroll_to_current()
+        void ListBox::scroll_to(size_t index)
         {
-            item_t *curr    = find_by_index(nCurrIndex);
+            if (nFlags & SIZE_INVALID)
+            {
+                nPendingIndex       = index;
+                return;
+            }
+
+            item_t *curr    = find_by_index(index);
+            if (curr == NULL)
+                return;
+
             ssize_t start   = vVisible.index_of(curr);
             if (start >= 0)
             {
                 if (scroll_to_item(start))
                     realize_children();
             }
+        }
+
+        void ListBox::scroll_to_current()
+        {
+            scroll_to(nCurrIndex);
         }
 
         void ListBox::realize_children()
@@ -785,16 +806,18 @@ namespace lsp
             if (item == NULL)
                 return;
 
-            ListBox *_this = widget_ptrcast<ListBox>(obj);
-            if (_this == NULL)
+            ListBox *self = widget_ptrcast<ListBox>(obj);
+            if (self == NULL)
                 return;
 
             // Change parent only if we are working with the main item list.
-            if (_this->vItems.is(prop))
+            if (self->vItems.is(prop))
             {
-                item->set_parent(_this);
+                item->set_parent(self);
             }
-            _this->query_resize();
+
+            self->vVisible.clear();
+            self->query_resize();
         }
 
         void ListBox::on_remove_item(void *obj, Property *prop, void *w)
@@ -816,6 +839,7 @@ namespace lsp
                 self->unlink_widget(item);
             }
 
+            self->vVisible.clear();
             self->query_resize();
         }
 
@@ -958,7 +982,7 @@ namespace lsp
                 }
             }
 
-            lsp_trace("first = %d", int(first));
+//            lsp_trace("first = %d", int(first));
             it  = vVisible.uget(lsp_limit(first, 0, ssize_t(vVisible.size() - 1)));
             return (Position::inside(&it->r, x, y)) ? it : NULL;
         }
