@@ -4,6 +4,7 @@
 
 === 1.0.24 ===
 * Improved ListBox behaviour relative to the item size.
+* Bugfixes in tk::ListBox related to item creation, deletion and selection.
 * Added text estimation suppot for tk::Button widget. 
 * Added aggregate size computation (enabled by default) for tk::TabControl widget.
 * Fixed bug in bookmak editor (set first/last actions) of the tk::FileDialog widget.
